# abs

./: .gitignore  .gitmodules  Cargo.toml  abs.sh
abs/: abs.json
exampledir/: pkglist  run-abs.sh
exampledir/.config/abs/: config.json
exampledir/config/: abs.conf
src/: main.rs
