[package]
name = "abs"
version = "0.0.1"
edition = "2021"

description = "My simple* system for hosting an archlinux mirror as well as an AUR repo for building custom packages "
license = "GPL-3.0"
repository = "https://github.com/katalysatorn/abs"

[dependencies]
serde = "1.0.217"
serde_json = "1.0.138"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
